[project]
name = "payment-process-luna"
version = "0.1.0"
description = "Async payment processing microservice"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "faststream[rabbit]>=0.5.31",
    "httpx>=0.28.0",
    "aio-pika>=9.4.0",
    "python-json-logger>=4.1.0",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[tool.pdm.scripts]
mypy = "mypy"
ruff = "ruff"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.22.1",
]
